# Huffman-Compressor

./: Cargo.toml  README.md
docs/: index.html
docs/pkg/: huffman_web.d.ts  huffman_web.js  huffman_web_bg.wasm  package.json
src/: bitio.rs  codec.rs  huffman.rs  main.rs  tui.rs
